--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,14 @@
 Package: npmv
 Type: Package
 Title: Nonparametric Comparison of Multivariate Samples
-Version: 1.0
-Date: 2012-07-03
-Author: Woodrow Burchett
+Version: 2.0
+Date: 2013-07-03
+Author: Woodrow Burchett and Amanda Ellis
 Maintainer: Woodrow Burchett <woodrow.burchett@uky.edu>
-Description: Performs analysis of one-way multivariate data, for small
-        samples using Nonparametric techniques. Using approximations
-        for ANOVA Type, Wilk's Lambda, Lawley Hotelling, and Bartlett
-        Nanda Pillai Test statics, the package compares the multvariate
-        distributions for a single explanatory variable.  The
-        comparision is also performed using a permutation test for each
-        of the four test statistics.
+Description: Performs analysis of one-way multivariate data, for small samples using Nonparametric techniques. Using approximations for ANOVA Type, Wilks' Lambda, Lawley Hotelling, and Bartlett Nanda Pillai Test statics, the package compares the multivariate distributions for a single explanatory variable.  The comparison is also performed using a permutation test for each of the four test statistics. The package also performs an all-subsets algorithm regarding variables and regarding factor levels. 
+Depends: Formula
 License: GPL-2
-Packaged: 2012-07-28 22:17:13 UTC; Aman
+Packaged: 2013-07-23 14:05:48 UTC; Amanda
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2012-07-29 18:17:48
+Date/Publication: 2013-07-26 01:27:46
