--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: npmv
 Type: Package
 Title: Nonparametric Comparison of Multivariate Samples
-Version: 2.2
-Date: 2015-02-20
+Version: 2.3.0
+Date: 2015-08-24
 Author: Woodrow Burchett and Amanda Ellis
 Maintainer: Amanda Ellis <arelli4@uky.edu>
 Description: Performs analysis of one-way multivariate data, for small samples using Nonparametric techniques. Using approximations for ANOVA Type, Wilks' Lambda, Lawley Hotelling, and Bartlett Nanda Pillai Test statics, the package compares the multivariate distributions for a single explanatory variable.  The comparison is also performed using a permutation test for each of the four test statistics. The package also performs an all-subsets algorithm regarding variables and regarding factor levels. 
-Imports: Formula
+Imports: Formula, methods
 License: GPL-2
-Packaged: 2015-02-25 02:47:01 UTC; Amanda
 NeedsCompilation: no
+Packaged: 2015-08-30 17:51:40 UTC; Amanda
 Repository: CRAN
-Date/Publication: 2015-02-25 08:12:44
+Date/Publication: 2015-08-30 20:52:33
